# CATChem

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  lint.yml
docs/: Makefile  conf.py  environment-docs.yml  index.rst
docs/_static/: style.css
docs/develop/: developers_guide.rst  development_team.rst
drivers/ccpp/: catchem_anthropogenic_wrapper.F90  catchem_diag_wrapper.F90  catchem_dmsemis_wrapper.F90  catchem_drydep_wrapper.F90  catchem_dust_wrapper.F90  catchem_gocart_wrapper.F90  catchem_lsdep_wrapper.F90  catchem_plume_wrapper.F90  catchem_rad_wrapper.F90  catchem_seas_wrapper.F90  catchem_settling_wrapper.F90  catchem_wetdep_wrapper.F90
parameters/: catchem_config.F90  catchem_constants.F90  catchem_constants.mod  ddep_data_mod.F90  ddep_data_mod.mod  dust_data_mod.F90  opt_data_mod.F90  opt_data_mod.mod  plume_data_mod.F90  seas_data_mod.F90
src/: aero_soa_vbs_data_mod.F90  dep_dry_gocart_mod.F90  dep_dry_mod.F90  dep_simple_mod.F90  dep_vertmx_mod.F90  dep_wet_ls_mod.F90  drydep_gocart_mod.F90  drydep_wesely_mod.F90  dust_afwa_mod.F90  dust_fengsha_mod.F90  dust_ginoux_mod.F90  dust_gocart_mod.F90  gocart_aerosols_mod.F90  gocart_chem_mod.F90  gocart_diag_mod.F90  gocart_dmsemis_mod.F90  gocart_dust_default_mod.F90  gocart_dust_simple_mod.F90  gocart_seas_default_mod.F90  gocart_seas_ngac_mod.F90  gocart_seas_simple_mod.F90  gocart_settling_mod.F90  opt_aer_mod.F90  opt_aer_out_mod.F90  opt_aer_ra_mod.F90  opt_averaging_mod.F90  opt_driver_mod.F90  opt_gocart_mod.F90  opt_mod.F90  plume_rise_mod.F90  plume_scalar_mod.F90  plume_zero_mod.F90  seas_emis_2bins_mod.F90  seas_emis_default_mod.F90  seas_emis_ngac_mod.F90  seas_mod.F90  seas_ngac_mod.F90  vash_settling_mod.F90  wetdep_ls_mod.F90
